--- a/GrafSort/GrafSort.csproj
+++ b/GrafSort/GrafSort.csproj
@@ -64,6 +64,12 @@
   <ItemGroup>
     <Compile Include="BubbleSortClass.cs" />
     <Compile Include="CombSortClass.cs" />
+    <Compile Include="Form2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form2.Designer.cs">
+      <DependentUpon>Form2.cs</DependentUpon>
+    </Compile>
     <Compile Include="GnomeSortClass.cs" />
     <Compile Include="HeapSortClass.cs" />
     <Compile Include="InsertionSortClass.cs" />
@@ -87,6 +93,9 @@
     <Compile Include="Test.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Form2.resx">
+      <DependentUpon>Form2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
